# simcqca

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  format_code.sh
src/: arguments.cpp  arguments.h  config.h  config.h.in  global.h  graphic_engine.cpp  graphic_engine.h  main.cpp  world.cpp  world.h
src/graphic_engine/: camera.cpp  rendering.cpp  tikz_generation.cpp
src/world/: border_cycle.cpp  line_col.cpp
